# diplomaterv

./: .gitignore  LICENSE  arm-gcc-none-eabi.ini  meson.build
.github/workflows/: latex.yml  openblt.yml
client/: meson.build
client/src/: main.c
common/: meson.build
common/test/include/: TAP.h  UnitTestAssert.h  UnitTestFramework.h
common/test/src/: TAP.c  UnitTestFramework.c  demotest.c
doc/: Makefile  thesis.tex
doc/bib/: mybib.bib
doc/content/: abstract.tex  introduction.tex
doc/include/: declaration.tex  guideline.tex
host/: meson.build
host/test/: main.c  syscall.c
subprojects/: openblt.wrap  printf.wrap
